--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.7",
     "@mui/material": "^7.3.7",
+    "@mui/x-date-pickers": "^8.26.0",
+    "airports-json": "^1.0.0",
+    "dayjs": "^1.11.19",
     "leaflet": "^1.9.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
