added unsplash api key ref to deploy yml

--- a/.github/workflows/deploy-cloudflare-pages.yml
+++ b/.github/workflows/deploy-cloudflare-pages.yml
@@ -30,6 +30,8 @@ jobs:
 
       - name: build
         run: npm run build
+        env:
+          VITE_UNSPLASH_ACCESS_KEY: ${{ secrets.UNSPLASH_ACCESS_KEY }}
 
       - name: deploy
         uses: cloudflare/pages-action@v1
