--- a/.github/workflows/deploy-cloudflare-pages.yml
+++ b/.github/workflows/deploy-cloudflare-pages.yml
@@ -8,6 +8,7 @@ on:
 
 permissions:
   contents: read
+  actions: write
 
 concurrency:
   group: cloudflare-pages-${{ github.ref }}
@@ -33,6 +34,13 @@ jobs:
         run: npm run build
         env:
           VITE_UNSPLASH_ACCESS_KEY: ${{ secrets.UNSPLASH_ACCESS_KEY }}
+
+      - name: upload bundle visualizer
+        uses: actions/upload-artifact@v4
+        with:
+          name: bundle-analysis
+          path: stats.html
+          retention-days: 7
 
       - name: deploy
         uses: cloudflare/pages-action@v1
