--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "tsc -b && vite build",
+    "dev:all": "bash scripts/dev-all.sh",
+    "build": "bash scripts/generate-env-for-build.sh && tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -25,6 +26,7 @@
     "react-swipeable": "^7.0.2"
   },
   "devDependencies": {
+    "concurrently": "^9.1.0",
     "@eslint/js": "^9.39.1",
     "@types/leaflet": "^1.9.21",
     "@types/node": "^24.10.1",
